--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 </tr>
                 <tr>
                     <td>QCOMB</td>
-                    <td>Sconosciuto</td>
+                    <td>Rosanna Sollazzi</td>
                     <td></td>
-                    <td>Omonimo</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>Huawey p8 light</td>
-                    <td>Anna</td>
+                    <td>Anna Colapietro</td>
                     <td>Mariangela Cianciola</td>
                     <td>Studente</td>
                 </tr>
