risolto piccolo problema

--- a/calcolo.html
+++ b/calcolo.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="header" style="padding: 0px; display: flex; justify-content:center; align-items:center">
-        <h1 style='display: inline; flex-grow: 3 '>Conteggio Presenti</h1>
+        <h1 style='display: inline; flex-grow: 3; font-size:1.5em; padding-left: 4px '>Conteggio Presenti</h1>
         <!-- <div class="salva" style='flex-grow: 1; user-select: none; border: 1px solid black'>SALVA</div> -->
         <input type="button" class="salva" style="width: 75px; padding: 5px; margin-right: 5px " value='SALVA'>
         <div style='display: inline;flex-grow: 1;padding: 15px; font-size: 20px;user-select: none;' class="button"><a href="#">Aggiungi</a></div>
-        <div style='display: inline; flex-grow: 1; font-size: 40px;text-align: center' class="display">0</div>
+        <div style='display: inline; flex-grow: 1; font-size: 40px;text-align: center; margin-right: 10px;' class="display">0</div>
     </div>
     <div class="container">
         <ul class="lista">
